# logicantsy

./: .gitignore  Dockerfile  Doxyfile  README.md
docs/: term_grammar.txt
docs/classdiag/: logicantsy.txt
docs/html/: ArithmeticProgression_8hpp_source.html  CLI11_8hpp_source.html  CombinationTree_8hpp_source.html  CombinationsDetail_8hpp_source.html  Combinations_8hpp_source.html  DyckPaths_8hpp_source.html  IndexedViewContainer_8hpp_source.html  IndexedView_8hpp_source.html  IntegerInterval_8hpp_source.html  LexCombinationsDetail_8hpp_source.html  LexCombinations_8hpp_source.html  Misc_8hpp_source.html  Motzkin_8hpp_source.html  MultisetsDetail_8hpp_source.html  Multisets_8hpp_source.html  Parallel_8hpp_source.html  PartitionsDetail_8hpp_source.html  Partitions_8hpp_source.html  Permutations_8hpp_source.html  Probability_8hpp_source.html  Reversed_8hpp_source.html  Sequences_8hpp_source.html  SetPartitions_8hpp_source.html  TemplateHelpers_8hpp_source.html  TimeHelpers_8hpp_source.html  VectorHelpers_8hpp_source.html  _arithmetic_progression_8hpp_source.html  _c_l_i11_8hpp_source.html  _combination_tree_8hpp_source.html  _combinations_8hpp_source.html  _combinations_detail_8hpp_source.html  _dyck_paths_8hpp_source.html  _indexed_view_8hpp_source.html  _indexed_view_container_8hpp_source.html  _integer_interval_8hpp_source.html  _lex_combinations_8hpp_source.html  _lex_combinations_detail_8hpp_source.html  _misc_8hpp_source.html  _motzkin_8hpp_source.html  _multisets_8hpp_source.html  (+409 more)
docs/latex/: annotated.tex  class_c_l_i_1_1_app.eps  class_c_l_i_1_1_app.tex  class_c_l_i_1_1_argument_mismatch.eps  class_c_l_i_1_1_argument_mismatch.tex  class_c_l_i_1_1_as_number_with_unit.eps  class_c_l_i_1_1_as_number_with_unit.tex  class_c_l_i_1_1_as_size_value.eps  class_c_l_i_1_1_as_size_value.tex  class_c_l_i_1_1_bad_name_string.eps  class_c_l_i_1_1_bad_name_string.tex  class_c_l_i_1_1_bound.eps  class_c_l_i_1_1_bound.tex  class_c_l_i_1_1_call_for_all_help.eps  class_c_l_i_1_1_call_for_all_help.tex  class_c_l_i_1_1_call_for_help.eps  class_c_l_i_1_1_call_for_help.tex  class_c_l_i_1_1_checked_transformer.eps  class_c_l_i_1_1_checked_transformer.tex  class_c_l_i_1_1_config.eps  class_c_l_i_1_1_config.tex  class_c_l_i_1_1_config_base.eps  class_c_l_i_1_1_config_base.tex  class_c_l_i_1_1_config_error.eps  class_c_l_i_1_1_config_error.tex  class_c_l_i_1_1_config_t_o_m_l.eps  class_c_l_i_1_1_config_t_o_m_l.tex  class_c_l_i_1_1_construction_error.eps  class_c_l_i_1_1_construction_error.tex  class_c_l_i_1_1_conversion_error.eps  class_c_l_i_1_1_conversion_error.tex  class_c_l_i_1_1_custom_validator.eps  class_c_l_i_1_1_custom_validator.tex  class_c_l_i_1_1_error.eps  class_c_l_i_1_1_error.tex  class_c_l_i_1_1_excludes_error.eps  class_c_l_i_1_1_excludes_error.tex  class_c_l_i_1_1_extras_error.eps  class_c_l_i_1_1_extras_error.tex  class_c_l_i_1_1_file_error.eps  (+243 more)
examples/analytically-derive/: PPorder-organized.yaml  PPorder.yaml
examples/axiomatization/: BKmatrix.yaml  CLmatrix.yaml  FDEbmatrix.yaml  Kleenebmatrix.yaml  L3matrix.yaml  P3matrix.yaml  PPorder.yaml  PWKmatrix.yaml  RQMLmatrix.yaml  WKBMatrix.yaml  mCibmatrix.yaml
examples/cli/: mc-pnm-axiomatization-4v.yml  mc-pnm-axiomatization-4vL.yml  mc-pnm-axiomatization-4vR.yml  mc-pnm-axiomatization-6v-nab.yml  mc-pnm-axiomatization-6v.yml  mc-pnm-axiomatization-EXTRUE-EXFALSE-2D.yml  mc-pnm-axiomatization-KB-1d.yml  mc-pnm-axiomatization-LP-1d-POS.yml  mc-pnm-axiomatization-LP-1d.yml  mc-pnm-axiomatization-LP-K3-2d-POS.yml  mc-pnm-axiomatization-LP-K3-2d.yml  mc-pnm-axiomatization-avron-4v-2D.yml  mc-pnm-axiomatization-avron-4v.yml  mc-pnm-axiomatization-avron-4vN.yml  mc-pnm-axiomatization-avron-4vY.yml  mc-pnm-axiomatization-cl-2d-partial.yml  mc-pnm-axiomatization-classical-2d.yml  mc-pnm-axiomatization-impfree-strong-kleene-1D.yml  mc-pnm-axiomatization-impfree-strong-kleene-2D.yml  mc-pnm-axiomatization-indet-1d.yml  mc-pnm-axiomatization-indet-2d.yml  mc-pnm-axiomatization-info-4v.yml  mc-pnm-axiomatization-mbc.yml  mc-pnm-axiomatization-mci-5v-1d.yml  mc-pnm-axiomatization-mci-5v-mod.yml  mc-pnm-axiomatization-mci-5v.yml  mc-pnm-axiomatization-nonfin-setset-example.yml  mc-pnm-axiomatization-p1-2d.yml  mc-pnm-axiomatization-pac-2d.yml  mc-pnm-axiomatization.yml  mc-pnm-sergio-example.yml  mc-pnm-vitor-example.yml  mc-pnm-vitor-example2.yml  rule-soundness-G3-only-imp.yml  rule-soundness-L3-only-imp.yml  sequent-rule-soundness-LP-K3-2d.yml  sequent-rule-soundness-ce.yml  sequent-rule-soundness.yml  soundness-check-mci-5v.yml  (+4 more)
sources/: CMakeLists.txt  README.md
sources/include/apps/: apps_facade.h  apps_reports.h
sources/include/apps/clones/: clone_generation.h
sources/include/apps/dualization/: symmetrical_calculi_dualization.h
sources/include/apps/pnm-axiomatization/: multipleconclusion.h
sources/include/cli/: cli11apps.h  clidefs.h  clihandlers.h
sources/include/core/: common.h  exception.h  syntax.h  utils.h
sources/include/core/combinatorics/: combinations.h
sources/include/core/exception/: exceptions.h
sources/include/core/parser/fmla/: bison_fmla_parser.y  flex_fmla_lexer.h  flex_fmla_lexer.l  fmla_parser.h
sources/include/core/printers/: base.h  factory.h  latex.h  std.h
sources/include/core/proof-theory/: multconc.h  ndsequents.h  sequents.h
sources/include/core/semantics/: attitude_semantics.h  attitudes.h  genmatrix.h  judgment_values_corr.h  nmatrices.h  truth_tables.h
sources/include/tt_determination/: ndsequents.h  ndsequents_normal_form.h  set_set.h
sources/include/yaml/: yamlcpp_parser.h
sources/src/cli/: cli.cpp
sources/src/core/: common.cpp  syntax.cpp  utils.cpp
sources/src/core/semantics/: attitudes.cpp  genmatrix.cpp  judgment_values_corr.cpp  truth_tables.cpp
sources/tests/: clone_generation_tests.cpp  combinatorics_tests.cpp  core_utils_tests.cpp  fmla_parser_tests.cpp  genmatrices_tests.cpp  new_genmatrix_test.cpp  nmatrices_tests.cpp  pnm_axiomatization.cpp  proof_theory_tests.cpp  syntax_tests.cpp  truth_table_determination.cpp  truth_table_tests.cpp
(+119 files in other folders)
